# mau

./: .gitignore  COMPLETE_SUMMARY.md  Cargo.toml  FINAL_IMPLEMENTATION.md  FINAL_SYNTAX.md  README.md
src/: lib.rs
tests/: 1.rs  2.rs  3.rs  array_ref_types.rs  array_types.rs  basic_types.rs  cache_key_value_test.rs  complex_algorithms.rs  complex_data_structures.rs  comprehensive_type_test.rs  custom_types.rs  each_example.rs  each_test.rs  edge_cases.rs  empty_sum_test.rs  fold_comprehensive_test.rs  fold_test.rs  inclusive_range_test.rs  index_mode_test.rs  lifetime_comprehensive_test.rs  map_types.rs  memo_mode_test.rs  memo_test.rs  min_macro_test.rs  multi_args_test.rs  multi_dimensional_arrays.rs  performance_test.rs  range_macros_test.rs  readme_example_test.rs  readme_inclusive_test.rs  reduce_test.rs  ref_mode_test.rs  set_types.rs  shorthand_test.rs  simple_lazy_test.rs  smart_deref_test.rs  string_types.rs  thread_mode_test.rs  thread_safety_test.rs  two_args_test.rs  (+1 more)
